--- a/任务三/myweb/package.json
+++ b/任务三/myweb/package.json
@@ -7,11 +7,14 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "formidable": "^1.1.1",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
+    "multiparty": "^4.1.3",
     "mysql": "^2.13.0",
     "serve-favicon": "~2.4.2"
   }
