--- a/vue-webpack/package.json
+++ b/vue-webpack/package.json
@@ -23,6 +23,7 @@
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.0.5",
+    "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
