--- a/q6(vue-webpack)/package.json
+++ b/q6(vue-webpack)/package.json
@@ -20,6 +20,9 @@
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.5",
+    "less": "^3.0.0-alpha.3",
+    "less-loader": "^4.0.5",
+    "node-less": "^1.0.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
