--- a/q6(vue-webpack)/package.json
+++ b/q6(vue-webpack)/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "less": "^3.0.0-alpha.3",
     "less-loader": "^4.0.5",
