--- a/q6(vue-webpack)/package.json
+++ b/q6(vue-webpack)/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack",
-    "server": "webpack-dev-server --host 192.168.3.3"
+    "server": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
