--- a/admin-project/front-end/package.json
+++ b/admin-project/front-end/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "vue-webpack",
+  "name": "front-end",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "webpack-dev-server --config ./webpack.dev.conf.js --progress --open",
-    "start": "npm run server",
-    "build": "webpack --config ./webpack.prod.conf.js --progress"
+    "build": "webpack --config ./config/webpack.prod.conf.js --progress",
+    "server": "webpack-dev-server --config ./config/webpack.dev.conf.js --progress --open",
+    "start": "npm run server"
   },
   "keywords": [],
   "author": "",
@@ -25,14 +25,13 @@
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
     "less": "^3.0.0-alpha.3",
     "less-loader": "^4.0.5",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "vue-axios": "^2.0.2",
     "vue-loader": "^13.0.5",
-    "vue-router": "^2.7.0",
+    "vue-router": "^2.8.1",
     "vue-template-compiler": "^2.4.4",
     "vuex": "^3.0.1",
     "webpack": "^3.6.0",
