--- a/admin-project/front-end/package.json
+++ b/admin-project/front-end/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
     "less": "^3.0.0-alpha.3",
     "less-loader": "^4.0.5",
     "style-loader": "^0.19.0",
